--- a/src/Pages/CreateRequestPage.css
+++ b/src/Pages/CreateRequestPage.css
@@ -20,12 +20,12 @@
 }
 
 .brack {
-  width: 60%;
+  width: 100px;
 }
 
 .angle-brack {
   height: 70vh;
-  width: 200px;
+
   display: flex;
   margin-left: 1%;
   justify-content: flex-end;
@@ -34,7 +34,7 @@
 
 .angle-brack1 {
   height: 70vh;
-  width: 200px;
+
   margin-right: 1%;
   display: flex;
   justify-content: flex-start;
@@ -44,7 +44,7 @@
 .table-request-form {
   box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.3);
   height: 65vh;
-  width: 40vw;
+  width: 60vw;
   border-radius: 20px;
   position: relative;
   display: flex;
@@ -106,7 +106,7 @@ label {
 
 .btn-request {
 
-  width: 18%;
+  width: 150px;
   padding: 10px;
   font-size: 18px;
 
@@ -142,4 +142,16 @@ label {
   justify-content: center;
   align-items: center;
   margin-left: 10%;
+}
+
+@media screen and (max-width: 750px) {
+
+  .angle-brack,
+  .angle-brack1 {
+    display: none;
+  }
+
+  .table-request-form {
+    width: 90%;
+  }
 }
