--- a/src/components/RequestHistory.css
+++ b/src/components/RequestHistory.css
@@ -18,6 +18,8 @@
   flex-direction: column;
   flex-wrap: wrap;
   word-wrap: break-word;
+  max-width: 60%;
+  overflow: hidden;
 }
 
 .outer-container {
@@ -59,7 +61,9 @@
 .subject {
   word-wrap: break-word;
   font-weight: 400;
-  font-size: 16px
+  font-size: 1rem;
+  width: 100%;
+
 }
 
 .tip {
@@ -137,24 +141,24 @@
   background: rgba(21, 120, 70, 1);
   cursor: pointer;
   border: none;
-  box-shadow:  0.5px 2px 5px -0.2px rgba(0, 0, 0, 0.21), 
-   -1.2px 2.1px 2px -0.2px rgba(0, 0, 0, 0.12), 
-   2.2px -2.1px 5px -0.5px rgba(219, 213, 213, 0.25), 
-   2.3px -0.25px 10px -0.2px rgba(43, 43, 43, 0), 
-   2.4px -1px 10px -0.3px rgba(255, 246, 246, 0.09),
-   2.4px 2px 10px -0.3px rgba(255, 246, 246, 0.908);
+  box-shadow: 0.5px 2px 5px -0.2px rgba(0, 0, 0, 0.21),
+    -1.2px 2.1px 2px -0.2px rgba(0, 0, 0, 0.12),
+    2.2px -2.1px 5px -0.5px rgba(219, 213, 213, 0.25),
+    2.3px -0.25px 10px -0.2px rgba(43, 43, 43, 0),
+    2.4px -1px 10px -0.3px rgba(255, 246, 246, 0.09),
+    2.4px 2px 10px -0.3px rgba(255, 246, 246, 0.908);
 }
 
 .start-call-btn-accept:hover {
   background: rgba(21, 120, 70, 1);
   transform: translate(0.15%, 0.15%);
   transform: scale(1.05, 1.05);
-  box-shadow:  0.5px 2px 5px -0.2px rgba(0, 0, 0, 0.21), 
-   -1.8px 2.1px 2px -0.2px rgba(0, 0, 0, 0.12), 
-   2.2px -2.1px 5px -0.5px rgba(255, 246, 246, 0.908), 
-   2.3px -0.25px 10px -0.2px rgba(43, 43, 43, 0), 
-   2.4px -1px 10px -0.3px rgba(255, 246, 246, 0.09),
-   2.4px 2px 10px -0.3px rgba(219, 213, 213, 0.25);
+  box-shadow: 0.5px 2px 5px -0.2px rgba(0, 0, 0, 0.21),
+    -1.8px 2.1px 2px -0.2px rgba(0, 0, 0, 0.12),
+    2.2px -2.1px 5px -0.5px rgba(255, 246, 246, 0.908),
+    2.3px -0.25px 10px -0.2px rgba(43, 43, 43, 0),
+    2.4px -1px 10px -0.3px rgba(255, 246, 246, 0.09),
+    2.4px 2px 10px -0.3px rgba(219, 213, 213, 0.25);
 }
 
 .start-call-btn-accept:active {
@@ -175,6 +179,22 @@
   cursor: pointer;
   border: none;
   margin: 0px 0px 15px 0px;
-  
+
 }
 
+
+
+@media screen and (max-width: 780px) {
+  .RequestHistory-wrapper {
+    flex-direction: column;
+    border: solid 0.5px gray;
+    border-radius: 14px;
+    padding: 2% 0;
+  }
+
+  .outer-container {
+    width: 90%;
+    margin: auto;
+  }
+
+}
