--- a/src/components/DashUserInfo.css
+++ b/src/components/DashUserInfo.css
@@ -361,6 +361,46 @@
   transform: translate(1.25%, 1.25%);
 }
 
+.cancel-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  font-family: Verdana;
+  min-width:100%;
+  padding: 0.5em;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 8px;
+  background:rgba(207, 47, 47, 1);
+  cursor: pointer;
+  border: none;
+  word-wrap: break-word;
+  margin: 0px 0px 15px 0px;
+  box-shadow: 0.5px 2px 5px -0.2px rgba(0, 0, 0, 0.21),
+    -1.2px 2.1px 2px -0.2px rgba(0, 0, 0, 0.12),
+    2.2px -2.1px 5px -0.5px rgba(219, 213, 213, 0.25),
+    2.3px -0.25px 10px -0.2px rgba(43, 43, 43, 0),
+    2.4px -1px 10px -0.3px rgba(255, 246, 246, 0.09),
+    2.4px 2px 10px -0.3px rgba(255, 246, 246, 0.908);
+}
+
+.cancel-btn:hover {
+  background: rgba(207, 47, 47, 0.9);
+  transform: translate(0.15%, 0.15%);
+  transform: scale(1.05, 1.05);
+  box-shadow: 0.5px 2px 5px -0.2px rgba(0, 0, 0, 0.21),
+    -1.8px 2.1px 2px -0.2px rgba(0, 0, 0, 0.12),
+    2.2px -2.1px 5px -0.5px rgba(255, 246, 246, 0.908),
+    2.3px -0.25px 10px -0.2px rgba(43, 43, 43, 0),
+    2.4px -1px 10px -0.3px rgba(255, 246, 246, 0.09),
+    2.4px 2px 10px -0.3px rgba(219, 213, 213, 0.25);
+}
+
+.cancel-btn:active {
+  background: rgba(207, 47, 47, 0.9);
+  transform: translate(1.25%, 1.25%);
+}
 
 @media only screen and (max-width: 500px) {
   .search-and-profile {
