--- a/src/Pages/ProfilePage.css
+++ b/src/Pages/ProfilePage.css
@@ -98,6 +98,9 @@
 
 .performance-reviews-wrapper {
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .profile-boxes-wrapper {
