--- a/src/components/SingleReview.css
+++ b/src/components/SingleReview.css
@@ -1,18 +1,10 @@
-/* <div className="single-review-wrapper">
-      <div className="single-review-info">
-        <div className="single-review-pic"> FOTO </div>
-        <div className="single-review-user"> by Pessoa</div>
-      </div>
-      <div className="single-review-text"> */
-
-
 .single-review-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 80%;
-  margin: 3% auto;
-  height: 10vh;
+  margin: 0 auto 3% auto;
+  min-height: 15vh;
   border-radius: 14px;
   padding: 2%;
   background-color: rgba(201, 200, 200, 0.8);
@@ -20,13 +12,39 @@
 }
 
 
-
-.single-review-text {
-  padding: 2%;
+.review-text-container {
+  padding: 2% 3%;
   word-wrap: break-word;
   overflow: auto;
 }
 
+.single-review-text {
+  margin: 3% 0 0 0;
+  width: 90%;
+}
+
 .review-pic {
   width: 80px;
+  border-radius: 14px;
+}
+
+.single-review-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: "Baloo Bhai";
+}
+
+.single-review-user {
+  font-size: 1rem;
+  text-decoration: underline;
+  margin: 3% 0 0 0;
+}
+
+.single-review-user:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.single-review-outer-wrapper {
+  padding: 1%;
 }
