--- a/src/Pages/CreateRequestPage.css
+++ b/src/Pages/CreateRequestPage.css
@@ -16,7 +16,6 @@
   align-items: center;
   justify-content: center;
   padding: 1%;
-
 }
 
 .brack {
@@ -24,22 +23,19 @@
 }
 
 .angle-brack {
-  height: 70vh;
+  height: 65vh;
 
   display: flex;
   margin-left: 1%;
   justify-content: flex-end;
-
 }
 
 .angle-brack1 {
-  height: 70vh;
-
+  height: 65vh;
   margin-right: 1%;
   display: flex;
   justify-content: flex-start;
 }
-
 
 .table-request-form {
   box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.3);
@@ -53,36 +49,32 @@
   background: rgba(201, 200, 200, 0.8);
 }
 
-
-
 .request-form {
   width: 100%;
-  height: 90%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: stretch;
-
+  /* align-items: stretch; */
+  position: absolute;
+  overflow-y: scroll;
 }
-
 
 .input-box-wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-
-  height: 80%;
+  justify-content: space-between;
+  height: 100%;
+  /* position: absolute; */
+  width: 100%;
 }
-
-
 
 .input-request-box {
   display: flex;
   flex-direction: column;
-
-  height: 40%;
   padding: 0 1.5%;
-
+  margin-top: 3%;
+  /* height: fit-content; */
 }
 
 .create-title {
@@ -93,9 +85,13 @@
 }
 
 label {
-
   font-family: "Baloo Bhai 2", cursive;
-  margin-top: 1%;
+  /* margin-top: 1%; */
+}
+
+label[for="subject-input"] {
+  /* margin-top: 4%; */
+  height: fit-content;
 }
 
 .input-request {
@@ -105,11 +101,9 @@ label {
 }
 
 .btn-request {
-
   width: 150px;
-  padding: 10px;
+  padding: 5px;
   font-size: 18px;
-
   border: none;
   background-color: black;
   color: #fff;
@@ -132,7 +126,8 @@ label {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  margin-top: 2%;
+  margin-bottom: 1%;
+  margin-top: 1%;
   padding: 0 1.5%;
 }
 
@@ -145,7 +140,6 @@ label {
 }
 
 @media screen and (max-width: 750px) {
-
   .angle-brack,
   .angle-brack1 {
     display: none;
