--- a/src/Pages/CreateReviewPage.css
+++ b/src/Pages/CreateReviewPage.css
@@ -28,6 +28,7 @@
   background: -webkit-linear-gradient(to right, #414345, #232526);
   background: linear-gradient(to right, #414345, #232526);
   border-radius: 20px;
+  height: fit-content;
 }
 
 .model-header-container {
