Added folder structure and fixed profile pic upload process

--- a/src/Pages/ProfilePage.css
+++ b/src/Pages/ProfilePage.css
@@ -111,8 +111,6 @@
   min-height: 12vh;
 }
 
-
-
 .wrapper-box {
   display: flex;
   justify-content: left;
@@ -169,6 +167,8 @@
   font-size: 15px;
   border-radius: 5px;
   border-color: lightgray;
+  resize: none;
+  width: 60%;
 }
 
 #profile-socialmedia {
@@ -246,5 +246,5 @@ input[type="file"] {
   background: rgba(0, 0, 0, 0.2);
 }
 
-
-@media only screen and (max-width: 800px) {}
+@media only screen and (max-width: 800px) {
+}
