--- a/src/components/DetailsModal.css
+++ b/src/components/DetailsModal.css
@@ -144,7 +144,7 @@
 
 .modal-help-title {
   word-wrap: break-word;
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-family: "Baloo Bhai";
 
 }
@@ -170,4 +170,7 @@
 .modal-help-description,
 .modal-help-tech {
   min-height: 30px;
+  max-height: 90px;
+  overflow: auto;
+  max-width: 30vw;
 }
