--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,5 +1,5 @@
 .background-image {
-  background-image: url("/Users/fernandarodrigues/Codeworks/HelperDuckClient/src/media/ducky.png");
+  /* background-image: url("/Users/fernandarodrigues/Codeworks/HelperDuckClient/src/media/ducky.png"); */
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
