--- a/src/components/dashboard/RequestHistory.css
+++ b/src/components/dashboard/RequestHistory.css
@@ -156,6 +156,15 @@
 }
 
 
+.noRequests {
+  height: 10vh;
+  text-align: center;
+  vertical-align: middle;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media only screen and (max-width: 960px) {}
 
 
