--- a/src/Pages/ProfilePage.css
+++ b/src/Pages/ProfilePage.css
@@ -1,5 +1,5 @@
 .profile-wrapper {
-  padding: 1.5%;
+  padding: 1%;
 }
 
 .profile-container {
@@ -246,5 +246,4 @@ input[type="file"] {
   background: rgba(0, 0, 0, 0.2);
 }
 
-@media only screen and (max-width: 800px) {
-}
+@media only screen and (max-width: 800px) {}
