--- a/src/Pages/PaymentPage.css
+++ b/src/Pages/PaymentPage.css
@@ -1,15 +1,13 @@
-.payment--outer-wrapper {
-
-  width: 98vw;
-  height: 90vh;
-  position: absolute;
-  top: -1%;
-}
-
 .css-1lbwe8h {
   margin: 1% auto !important;
 }
 
 .css-1jciu65 {
   padding: 10px 20px 20px 20px !important;
+}
+
+.css-1vwm2gx,
+.css-dycvr2 {
+  margin-bottom: 30px !important;
+  color: black !important;
 }
