--- a/src/Pages/ProfilePage.css
+++ b/src/Pages/ProfilePage.css
@@ -168,7 +168,7 @@
   border-radius: 5px;
   border-color: lightgray;
   resize: none;
-  width: 60%;
+  width: 100%;
 }
 
 #profile-socialmedia {
@@ -246,4 +246,5 @@ input[type="file"] {
   background: rgba(0, 0, 0, 0.2);
 }
 
-@media only screen and (max-width: 800px) {}
+@media only screen and (max-width: 800px) {
+}
