--- a/src/Pages/VideoCallPage.css
+++ b/src/Pages/VideoCallPage.css
@@ -13,7 +13,6 @@
   height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
-  /* background-image: url('../media/svg/download.svg'); */
   background-image: url('../media/svg/background_helperduck.svg');
   background-color: rgb(30, 27, 27);
   /* animation: mymove 5s infinite alternate; */
@@ -36,7 +35,10 @@
   display: flex;
   justify-content: center;
   flex-direction: row;
+  flex-wrap: wrap;
 }
+
+
 
 /*generic container for MyVideo and PeersVideo*/
 .video-container {
@@ -64,8 +66,9 @@
 
 .video-btn {
   border-radius: 50%;
-  background-color: rgb(255, 255, 255);
-  margin: 0.5em;
+  border: 1.5px solid rgba(255, 162, 0, 0.9);
+  background-color: rgb(0,0,0,1);
+  margin: 0.3em;
   width: 2.2em;
   height: 2.2em;
   cursor: pointer;
@@ -87,7 +90,8 @@
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(https://res.cloudinary.com/brnl/image/upload/v1656587693/HelperDuck/blob-scene-haikei_1_oxjync.svg);
+    background-image: url('../media/svg/background_helperduck.svg');
+    background-color: rgb(30, 27, 27);
   }
   
   .participants-videos-wrapper {
