--- a/src/components/DetailsModal.css
+++ b/src/components/DetailsModal.css
@@ -146,7 +146,7 @@
 .modal-help-title {
   word-wrap: break-word;
   font-size: 1rem;
-  font-family: "Baloo Bhai";
+  font-family: "Baloo Bhai 2";
 
 }
 
