--- a/src/components/dashboard/IncomingRequest.css
+++ b/src/components/dashboard/IncomingRequest.css
@@ -78,7 +78,8 @@
 .subject {
   font-size: 1.2rem;
   font-weight: bold;
-  font-family: "Baloo Bhai";
+  font-family: "Baloo Bhai 2";
+  font-weight: 900;
 }
 
 .user {
