--- a/src/components/profile/ProfileInfo.css
+++ b/src/components/profile/ProfileInfo.css
@@ -70,8 +70,8 @@
 .review-word {
   font-size: 20px;
   margin: auto;
-  font-family: "Baloo Bhai";
+  font-family: "Baloo Bhai 2";
   width: 80%;
   margin-top: 1%;
-
+  font-weight: 900;
 }
