--- a/src/components/profile/SingleReview.css
+++ b/src/components/profile/SingleReview.css
@@ -33,7 +33,7 @@
 .single-review-title {
   font-size: 1.2rem;
   font-weight: bold;
-  font-family: "Baloo Bhai";
+  font-family: "Baloo Bhai 2";
 }
 
 .single-review-user {
