--- a/src/components/dashboard/RequestHistory.css
+++ b/src/components/dashboard/RequestHistory.css
@@ -63,7 +63,8 @@
   word-wrap: break-word;
   font-weight: 400;
   font-size: 1rem;
-  font-family: "Baloo Bhai";
+  font-family: "Baloo Bhai 2";
+  font-weight: 900;
 }
 
 
@@ -105,6 +106,8 @@
   font-weight: 400;
   font-size: 1rem;
   width: 100%;
+  font-family: "Baloo Bhai 2";
+  font-weight: 900;
 
 }
 
@@ -163,6 +166,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
 
 @media only screen and (max-width: 960px) {}
