--- a/src/components/profile/ProfilePerformanceInfo.css
+++ b/src/components/profile/ProfilePerformanceInfo.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin-right: 1%;
   margin-left: 10%;
-  font-family: "Baloo Bhai";
+  font-family: "Baloo Bhai 2";
   width: 80%;
 }
 
@@ -15,6 +15,7 @@
 .request-title {
   font-size: 20px;
   margin: 10px 0;
+  font-weight: 900;
 }
 
 .stats-outer-container {
@@ -38,9 +39,11 @@
   font-size: 2rem;
   display: flex;
   align-items: center;
+  font-weight: 900;
 }
 
 .word {
+
   font-size: 1.2rem;
   display: flex;
   align-items: center;
